# modelc

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PRODUCT.md  README.md  SPEC.md  TODO.md  build.rs
.github/workflows/: ci.yml
examples/: README.md  create_simple_model.rs  inspect_model.rs  parse_weights.rs  runtime_inference.rs
src/: arch.rs  chat_template.rs  cli.rs  compiler.rs  config.rs  constraint.rs  containerize.rs  draft.rs  generate.rs  json_schema.rs  lib.rs  lora.rs  main.rs  metal.rs  model.rs  pack.rs  prefix_cache.rs  serve.rs  store.rs  tokenizer.rs
src/codegen/: mod.rs  native.rs
src/codegen/native/: forward.rs  helpers.rs  mod.rs
src/compute/: shaders.metal
src/onnx_exec/: helpers.rs  mod.rs
src/parsers/: gguf.rs  mod.rs  onnx.rs  pytorch.rs  safetensors.rs
src/parsers/gguf/: cursor.rs  dequant.rs  mod.rs
src/parsers/onnx/: initializers.rs  mod.rs
src/runtime/: mod.rs  ops.rs  serve.rs  tensor.rs  transformer.rs
src/serve/: auth.rs  handlers.rs  infer.rs  metrics.rs  mod.rs  openai.rs
tests/: cli_test.rs  codegen_test.rs  compiler_e2e_test.rs  compiler_inspect_smoke_test.rs  containerize_test.rs  lora_test.rs  model_test.rs  onnx_exec_test.rs  prefix_cache_test.rs  pytorch_zip_parser_test.rs  runtime_ops_test.rs  runtime_serve_test.rs  runtime_tensor_test.rs  safetensors_parser_test.rs  store_test.rs  transformer_runtime_test.rs
tests/common/: mod.rs
