[package]
name = "modelc"
version = "0.1.5"
edition = "2024"
description = "Compile model weight files to standalone executable binaries"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/modelc"
homepage = "https://github.com/yingkitw/modelc"
documentation = "https://docs.rs/modelc"
build = "build.rs"

[[bin]]
name = "modelc"
path = "src/bin/modelc.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
safetensors = "0.4"
byteorder = "1"
tempfile = "3"
half = "2"
onnx-rs = "0.1.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tokio-stream = "0.1"
dirs = "6"
toml = "0.8"
ureq = "3"
regex = "1"
jsonschema = "0.29"
zstd = "0.13"
rand = "0.8"
minijinja = "2"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
